# freedom-analysis

./: Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
freedom_analysis/: converter_to_csv.py  exploratory_analysis.ipynb
freedom_analysis/data/: index2013_data.csv  index2014_data.csv  index2015_data.csv  index2016_data.csv  index2017_data.csv  index2018_data.csv  index2019_data.csv  index2020_data.csv
tests/: test_freedom_analysis.py
